force-app/main/default/objects/Fuel_Order__c/Fuel_Order__c.object-meta.xml
<CustomObject>
    <label>Fuel Order</label>
    <nameField>
        <label>Fuel Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fuel Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>