force-app/main/default/objects/Fuel_Order__c/fields/Assigned_Driver__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Driver__c</fullName>
    <label>Assigned Driver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assigned Fuel Orders</relationshipLabel>
    <relationshipName>Assigned_Fuel_Orders</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>