force-app/main/default/objects/Fuel_Order__c/fields/Assigned_Provider__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Provider__c</fullName>
    <label>Assigned Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assigned Fuel Orders</relationshipLabel>
    <relationshipName>Assigned_Fuel_Orders</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>