force-app/main/default/objects/Fuel_Order__c/fields/Delivery_GPS_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>Delivery_GPS_Coordinates__c</fullName>
    <label>Delivery GPS Coordinates</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>