force-app/main/default/objects/Fuel_Order__c/fields/Delivery_Window_End__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Window_End__c</fullName>
    <label>Delivery Window End</label>
    <type>DateTime</type>
</CustomField>