force-app/main/default/objects/Fuel_Order__c/fields/Delivery_Window_Start__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Window_Start__c</fullName>
    <label>Delivery Window Start</label>
    <type>DateTime</type>
</CustomField>