force-app/main/default/objects/Fuel_Order__c/fields/IoT_Triggered_Order__c.field-meta.xml
<CustomField>
    <fullName>IoT_Triggered_Order__c</fullName>
    <label>IoT Triggered Order</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>